[gd_scene load_steps=7 format=3 uid="uid://bf40kh3d4wcto"]

[ext_resource type="Script" uid="uid://87kwxphreif4" path="res://scenes/ui.gd" id="1_nt7q6"]
[ext_resource type="Theme" uid="uid://bcxmt6c2ecx3g" path="res://theme.tres" id="2_wm3ai"]
[ext_resource type="Script" uid="uid://bdta37svqp68f" path="res://hide_on_web.gd" id="2_x4jx1"]
[ext_resource type="Texture2D" uid="uid://cw40yk0byhh0o" path="res://assets/symbol.png" id="2_yev5y"]
[ext_resource type="Texture2D" uid="uid://bkfk52rmfmeum" path="res://assets/symbol3.png" id="3_gdt2y"]
[ext_resource type="Texture2D" uid="uid://bxshv0dr8d4fj" path="res://assets/symbol2.png" id="6_8dubc"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt7q6")

[node name="StartMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="StartMenu"]
clip_contents = true
layout_mode = 2
offset_left = 178.0
offset_top = -31.0
offset_right = 426.0
offset_bottom = 217.0
rotation = 0.190241
scale = Vector2(2, 2)
size_flags_horizontal = 4
theme = ExtResource("2_wm3ai")
icon = ExtResource("2_yev5y")

[node name="Exit" type="Button" parent="StartMenu"]
layout_mode = 2
offset_left = 664.0
offset_top = 370.0
offset_right = 912.0
offset_bottom = 618.0
rotation = 0.190241
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 4
theme = ExtResource("2_wm3ai")
icon = ExtResource("3_gdt2y")
script = ExtResource("2_x4jx1")

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="PauseMenu"]
clip_contents = true
layout_mode = 2
offset_left = 178.0
offset_top = -31.0
offset_right = 426.0
offset_bottom = 217.0
rotation = 0.190241
scale = Vector2(2, 2)
size_flags_horizontal = 4
theme = ExtResource("2_wm3ai")
icon = ExtResource("2_yev5y")

[node name="RestartButton" type="Button" parent="PauseMenu"]
clip_contents = true
layout_mode = 2
offset_left = 668.0
offset_top = 77.0
offset_right = 916.0
offset_bottom = 325.0
scale = Vector2(1.015, 1.015)
size_flags_horizontal = 4
theme = ExtResource("2_wm3ai")
icon = ExtResource("6_8dubc")

[node name="QuitButton" type="Button" parent="PauseMenu"]
layout_mode = 2
offset_left = 664.0
offset_top = 370.0
offset_right = 912.0
offset_bottom = 618.0
rotation = 0.190241
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 4
theme = ExtResource("2_wm3ai")
icon = ExtResource("3_gdt2y")
script = ExtResource("2_x4jx1")

[node name="SettingsMenu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 49.0
offset_right = 100.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioSettings" type="Panel" parent="SettingsMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Master" type="HBoxContainer" parent="SettingsMenu/AudioSettings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Label" type="Label" parent="SettingsMenu/AudioSettings/Master"]
layout_mode = 2
text = "Master"

[node name="HSlider" type="HSlider" parent="SettingsMenu/AudioSettings/Master"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
tick_count = 10
ticks_on_borders = true

[node name="BackButton" type="Button" parent="SettingsMenu"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="StartMenu/Play" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/Exit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PauseMenu/Play" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsMenu/BackButton" to="." method="_on_back_button_pressed"]
